<resources>
    <string name="app_name">Ignite</string>
    <string name="renungan">Renungan</string>
    <string name="nytb">Nama Yesus Terus Bersuara</string>
    <string name="keluar">Keluar</string>
    <string name="option">Option</string>
    <string name="gambar">Gambar</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="back">back</string>
    <string name="renungan_hari_ini">Renungan hari ini</string>
    <string name="ayat_hari_ini">Ayat Renungan</string>
    <string name="hari_ini">Hari Ini</string>
    <string name="semua_renungan">Semua Renungan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ayat">Ayat Hari Ini</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="renungan_format">Renungan %1$s</string>
    <string name="ayat_format">%1$s</string>
    <string name="bait_format">"Bait  : %1$s</string>
    <string name="koor_format">Koor : %1$s</string>
    <string name="nada">nada</string>
    <string name="bait">bait</string>
    <string name="koor">koor</string>
    <string name="satu">1</string>
    <string name="baitl">Bait :</string>
    <string name="koorl">Koor :</string>
    <string name="detai_tentang">Selamat datang di aplikasi "Ignite", platform digital yang didedikasikan untuk mendukung pertumbuhan rohani melalui renungan harian dan himne. Kami memahami pentingnya momen refleksi pribadi dalam memuji Tuhan serta merenungkan Firman-Nya. Oleh karena itu, kami berkomitmen untuk menyediakan sumber daya yang bermanfaat bagi setiap Jemaat.\n\n<b>Renungan Harian</b>\n\nSetiap Senin sampai Sabtu, kami menghadirkan renungan yang bertujuan untuk memperkaya kehidupan rohani Jemaat dan merenungkan Firman Tuhan dalam kehidupan sehari-hari.\n\n<b>Nama Yesus Terus Bersuara</b>\n\nAplikasi ini juga menyediakan akses digital ke Buku Kidung "Nama Yesus Terus Bersuara". Kami berharap dengan adanya akses digital ke Buku Kidung "Nama Yesus Terus Bersuara" dapat  memudahkan jemaat dalam memuliakan nama Tuhan.\n\nTerima kasih untuk setiap teman yang terlibat dalam pengembangan aplikasi ini.\n\n<b>Hubungi Kami</b>\n\nJika anda memiliki saran, masukan, atau pertanyaan, silakan menghubungi kami melalui email [appskalvari@gmail.com]. \n\n<b>To God Be The Glory!</b>\n\n</string>
    <string name="alert_title">Koneksi - Offline</string>
    <string name="alert_message">Anda Sedang Offline, Mohon aktifkan data seluler atau sambungkan dengan WiFi</string>
    <string name="notification">Notification</string>
    <string name="no_data">No Data Found</string>
    <string name="alert_ayat">Kami mohon maaf, ayat tidak dapat dimuat saat ini. Hal ini mungkin disebabkan oleh masalah jaringan atau kendala pada server.\n\nKami menghargai kesabaran Anda, dan silakan coba lagi dalam beberapa saat. Terima kasih atas pengertiannya.</string>
    <string name="share">share</string>
</resources>