<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.KidungDetailActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/darkblue">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/tgl_renungan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/nytb"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nolagu"
            android:text="@string/satu"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollviuu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:id="@+id/relatel"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/title_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/nada_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_detail"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/nada"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/leotb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nada_detail"
                android:layout_marginStart="30dp"
                android:text="@string/baitl"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/bait_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/leotb"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/bait"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/leotk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bait_detail"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/koorl"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/koor_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/leotk"
                android:layout_marginStart="40dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/koor"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>


    </ScrollView>

</RelativeLayout>