<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".detail.RenunganDetailActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/maroon">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_24"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renungan_hari_ini"
            android:textColor="@color/white"
            android:layout_marginStart="25dp"/>

    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ScrollViewSize">

            <TextView
                android:id="@+id/title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/title"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/ayat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_detail"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/black"
                android:text="@string/ayat"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ayat"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="56dp"
                android:layout_centerHorizontal="true"
                android:text="@string/content"
                android:textSize="20sp"
                android:textColor="@color/black" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>