<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TentangAplikasiActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/darkblue">

        <ImageView
            android:id="@+id/kembalipulang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_24"/>

        <TextView
            android:id="@+id/tbjd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/tentang_aplikasi"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:id="@+id/relatel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/detai_tentang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detai_tentang"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_margin="20dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/app_name"/>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>