<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="5dp"
    tools:context=".fragment.HariIniFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ScrollViewSize">

            <ImageView
                android:id="@+id/prevButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twotone_arrow_circle_left_24"
                android:layout_toStartOf="@id/title"
                android:layout_marginTop="15dp"/>

            <ImageView
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twotone_arrow_circle_right_24"
                android:layout_toEndOf="@id/title"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/title"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/ayat_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/black"
                android:text="@string/ayat"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/content_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ayat_today"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="56dp"
                android:layout_centerHorizontal="true"
                android:text="@string/content"
                android:textSize="20sp"
                android:textColor="@color/black" />

        </RelativeLayout>
    </ScrollView>

</FrameLayout>